<resources>

    <string name="app_name">桃花源社区</string>
    <string name="home_menu_home">小区</string>
    <string name="home_menu_property_service">物业</string>
    <string name="home_menu_community">邻里</string>
    <string name="home_menu_person_center">我的</string>
    <string name="home_back">请再按一次退出</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="access_control">门禁通行</string>
    <string name="delivery_message">快递信息</string>
    <string name="my_message">我的消息</string>
    <string name="my_bill">我的账单</string>
    <string name="account_manage_text">账单管理</string>
    <string name="payment_list_text">缴费清单</string>
    <string name="convenience_of_information">便民信息</string>
    <string name="property_my_ticket">我的工单</string>
    <string name="property_call">一键呼叫</string>
    <string name="property_payment">物业费用</string>
    <string name="car_payment">车位费用</string>
    <string name="other_payment">分摊费用</string>
    <string name="my_ticket_content">%1$s</string>
    <string name="home_shop_event_none">活动不存在</string>
    <string name="home_circles_post_hint_pick">添加图片\n最多6张</string>
    <string name="person_login_username">请输入手机号码</string>
    <string name="person_login_username_num">请输入手机号码</string>
    <string name="person_info_name">请输入姓名</string>
    <string name="person_info_nickname">请输入昵称</string>
    <string name="community_dynamic">动态</string>
    <string name="community_square">广场</string>
    <string name="official_recommendation">官方推荐</string>
    <string name="more">更多</string>
    <string name="popular_community">热门圈子</string>
    <string name="person_login_username2">手机号码/昵称</string>
    <string name="person_login_username1">请输入手机号码</string>
    <string name="person_login_password">请输入密码</string>
    <string name="person_login_login">登录</string>
    <string name="person_login_forget_password">忘记密码?</string>
    <string name="person_login_register">注册</string>
    <string name="person_login_tourist">游客</string>
    <string name="home_total_money">￥%1$s</string>
    <string name="home_payed_money">￥%1$s</string>
    <string name="register_one_choise_title">选择您的房屋</string>
    <string name="register_one_city">城市</string>
    <string name="register_one_city_name">南京市</string>
    <string name="register_one_plot">小区</string>
    <string name="register_one_plot_name">星雨华府</string>
    <string name="register_one_house">房号</string>
    <string name="register_one_agree">我同意</string>
    <string name="register_one_agreement">桃花源社区隐私条款与使用规则</string>
    <string name="register_one_sumbit">下一步</string>
    <string name="register_three_register_title">请填写注册信息</string>
    <string name="register_three_code">请输入验证码</string>
    <string name="register_three_name">请填写昵称</string>
    <string name="register_three_password">请输入新密码</string>
    <string name="register_three_password_again">请确认新密码</string>
    <string name="register_three_sumbit">注册</string>
    <string name="forget_password_sumbit">确定</string>
    <string name="forget_password_set_new_password">保存密码</string>
    <string name="forget_password_set_old_password">请输入旧密码</string>
    <string name="set_update_cancel">取消</string>
    <string name="set_update_quit">退出</string>
    <string name="updateVersion">更新</string>
    <string name="updateVersionTitel">软件更新</string>
    <string name="updating">正在更新</string>
    <string name="my_topic">我的话题</string>
    <string name="my_added_group">我的关注</string>
    <string name="my_edit_group">我管理的圈子</string>
    <string name="feedback_phone">请留下您的联系方式，如手机号码，谢谢</string>
    <string name="feedback_phone_sumbit">提交</string>
    <string name="feedback_phone_text">请在此留下您的宝贵意见，让我们不断进步,感谢您的支持！</string>
    <string name="comment_hint">说点什么吧...</string>

</resources>