<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/person_login_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="36dp"
                android:paddingTop="60dp" >

                <ImageView
                    android:id="@+id/person_login_top_pic_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person_login_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/person_login_username_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/person_login_username_left" />

                <EditText
                    android:id="@+id/person_login_username_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:hint="@string/person_login_username"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/person_input_text"
                    android:textColorHint="@color/person_input_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/person_login_password_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/person_login_password_left" />

                <EditText
                    android:id="@+id/person_login_password_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:hint="@string/person_login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/person_input_text"
                    android:textColorHint="@color/person_input_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/person_login_forget_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="6dp"
                    android:text="@string/person_login_forget_password"
                    android:textColor="@color/black_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/person_login_bt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/person_login_sumbit_bg_selector"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/person_login_login"
                android:textColor="@color/white_color"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="105dp"
                android:layout_marginBottom="37dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/person_login_register_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/person_login_register_bg_selector"
                    android:text="@string/person_login_register"
                    android:textColor="@color/person_login_register"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/person_login_d_line" />

                <Button
                    android:id="@+id/person_login_tourist_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/person_login_tourist_bg_selector"
                    android:text="@string/person_login_tourist"
                    android:textColor="@color/person_login_tourist"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>