<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_register_bg"
    android:orientation="vertical" >

    <include layout="@layout/app_title_pic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="28dp"
        android:background="@drawable/person_center_lists_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <EditText
            android:id="@+id/set_new_password_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/register_three_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/black_color"
            android:textColorHint="@color/person_input_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/person_center_lists_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <EditText
            android:id="@+id/set_new_password_again_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/register_three_password_again"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/black_color"
            android:textColorHint="@color/person_input_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/person_center_lists_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/set_new_password_sumbit_bt"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/person_register_sumbit_bg_new_selector"
            android:text="@string/forget_password_set_new_password"
            android:textColor="@color/white_color"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>