<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_register_bg"
    android:orientation="vertical" >

    <include layout="@layout/app_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:background="@drawable/person_center_gray_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@color/white_color"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <EditText
                    android:id="@+id/feedback_phonenum_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:hint="@string/feedback_phone"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textColorHint="@color/person_input_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/person_center_gray_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:background="@drawable/person_center_gray_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:background="@color/white_color"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <EditText
                    android:id="@+id/feedback_phonenum_text_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/feedback_phone_text"
                    android:imeOptions="actionDone"
                    android:maxLength="100"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:textColor="@color/black_color"
                    android:textColorHint="@color/person_input_hint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/feedback_text_length_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="0/100"
                    android:textColor="@color/community_come_from"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/person_center_gray_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/feedback_sumbit_bt"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/person_register_sumbit_bg_new_selector"
                    android:text="@string/feedback_phone_sumbit"
                    android:textColor="@color/white_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>